Optimize Tesseract OCR execution and remove slow AWT image processing